<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- common -->
    <string name="app_name">FruitBasket</string>
    <string name="code_name">Melon</string>

    <!-- 一覧画面 -->
    <string name="activity_name_book_list">図書一覧画面</string>
    <string name="action_transition_registration">登録画面へ</string>
    <string name="action_transition_web_search">Web検索画面へ</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>


    <!-- 登録画面 -->
    <string name="action_register">登録</string>
    <string name="activity_name_book_registration">図書登録画面</string>
    <string name="top_btn_book_reg">登録・更新</string>
    <string name="title_placeholder">図書タイトル</string>
    <string name="title_yomi_placeholder">図書タイトルふりがな</string>
    <string name="author_placeholder">著者名</string>
    <string name="author_yomi_placeholder">著者名ルふりがな</string>
    <string name="publisher_placeholder">出版社名</string>
    <string name="publisher_yomi_placeholder">出版社名ルふりがな</string>
    <string name="ISBN_placeholder">ISBN</string>
    <string name="release_date_label">発売日</string>
    <string name="number_of_turns_label">巻数</string>
    <string name="number_of_turns_placeholder">巻</string>
    <string name="money_label">金額</string>
    <string name="money_placeholder">円</string>
    <string name="state_label">状態</string>
    <string name="read_through_situation_label">読破状況</string>
    <string name="group_label">グループ</string>
    <string name="memo_label">メモ</string>
    <string name="delete_btn_text">×</string>
    <string name="go_web_search">Web検索画面へ</string>
    <string name="go_book_list">図書一覧画面へ</string>

    <!-- Web検索画面のコンポーネントに表示する文字列 -->
    <string name="activity_name_web_search">Web検索画面</string>

    <string name="text_init_value_title">タイトル</string>
    <string name="text_init_value_author">著者名</string>
    <string name="text_init_value_publisher">出版社名</string>
    <string name="text_init_value_isbn">ISBN</string>
    <string name="button_name_search">検索</string>
    <string name="title_activity_web_search">WebSearchActivity</string>
    <string name="hello_world">Hello world!</string>

    <string name="radio_label_sort">ソート</string>
    <string name="radio_label_filter">フィルタ</string>

    <!-- 楽天BOOKS API との通信で用いる文字列 -->
    <string name="webSerch_rakuten_conn_url_head">https://app.rakuten.co.jp/services/api/BooksBook/Search/20130522?format=xml&amp;</string>
    <string name="webSerch_rakuten_conn_url_tail">&amp;applicationId=1066904167385245120</string>

    <string name="webSerch_rakuten_queryBuild_ContentWrapper">"</string>
    <string name="webSerch_rakuten_queryBuild_Spacer"> </string>
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
