<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/bookListItemTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|start|center_horizontal"
        android:hint="@string/text_init_value_title"
        android:paddingBottom="5sp"
        android:paddingLeft="10sp"
        android:paddingTop="5sp"
        android:text="@string/text_init_value_title"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/bookListItemAuthor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="5sp"
        android:paddingLeft="20sp"
        android:text="@string/text_init_value_author"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/bookListItemPublisher"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="5sp"
        android:paddingLeft="20sp"
        android:text="@string/text_init_value_publisher"
        android:textAppearance="?android:attr/textAppearanceMedium" />
</LinearLayout>