<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="jp.co.icomsys.it21.fruitbasket.BookRegistrationActivity">

    <FrameLayout
        android:id="@+id/container"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="10dp">

                <ImageView
                    android:id="@+id/IB_019"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@drawable/fb2"/>

                <!-- 図書タイトル -->
                <EditText
                    android:id="@+id/ITX_006"
                    android:layout_width="200dp"
                    android:layout_height="30dp"
                    android:hint="@string/title_placeholder"
                    android:textSize="12dp"
                    android:inputType="text"
                    android:layout_toEndOf="@id/IB_019"
                    android:layout_marginStart="10dp"/>
                <Button
                    android:layout_width="35dp"
                    android:layout_height="30dp"
                    android:text="@string/delete_btn_text"
                    android:textSize="10dp"
                    android:layout_toEndOf="@id/ITX_006"
                    android:layout_marginStart="10dp"/>

                <!-- 図書タイトルふりがな -->
                <EditText
                    android:id="@+id/ITX_007"
                    android:layout_width="200dp"
                    android:layout_height="30dp"
                    android:hint="@string/title_yomi_placeholder"
                    android:textSize="12dp"
                    android:inputType="text"
                    android:layout_toEndOf="@id/IB_019"
                    android:layout_below="@id/ITX_006"
                    android:layout_marginStart="10dp"/>
                <Button
                    android:layout_width="35dp"
                    android:layout_height="30dp"
                    android:text="@string/delete_btn_text"
                    android:textSize="10dp"
                    android:layout_toEndOf="@id/ITX_007"
                    android:layout_below="@id/ITX_006"
                    android:layout_marginStart="10dp"/>

                <!-- 著者名 -->
                <EditText
                    android:id="@+id/ITX_008"
                    android:layout_width="270dp"
                    android:layout_height="30dp"
                    android:hint="@string/author_placeholder"
                    android:textSize="12dp"
                    android:inputType="text"
                    android:layout_below="@id/IB_019"
                    android:layout_marginTop="5dp"/>
                <Button
                    android:layout_width="35dp"
                    android:layout_height="30dp"
                    android:text="@string/delete_btn_text"
                    android:textSize="10dp"
                    android:layout_toEndOf="@id/ITX_008"
                    android:layout_below="@id/IB_019"
                    android:layout_marginTop="5dp"
                    android:layout_marginStart="15dp"/>

                <!-- 著者名振り仮名 -->
                <EditText
                    android:id="@+id/ITX_009"
                    android:layout_width="270dp"
                    android:layout_height="30dp"
                    android:hint="@string/author_yomi_placeholder"
                    android:textSize="12dp"
                    android:inputType="text"
                    android:layout_below="@id/ITX_008"
                    android:layout_marginTop="5dp"/>
                <Button
                    android:layout_width="35dp"
                    android:layout_height="30dp"
                    android:text="@string/delete_btn_text"
                    android:textSize="10dp"
                    android:layout_toEndOf="@id/ITX_009"
                    android:layout_below="@id/ITX_008"
                    android:layout_marginTop="5dp"
                    android:layout_marginStart="15dp"/>

                <!-- 出版社名 -->
                <EditText
                    android:id="@+id/ITX_010"
                    android:layout_width="270dp"
                    android:layout_height="30dp"
                    android:hint="@string/publisher_placeholder"
                    android:textSize="12dp"
                    android:inputType="text"
                    android:layout_below="@id/ITX_009"
                    android:layout_marginTop="5dp"/>
                <Button
                    android:layout_width="35dp"
                    android:layout_height="30dp"
                    android:text="@string/delete_btn_text"
                    android:textSize="10dp"
                    android:layout_toEndOf="@id/ITX_010"
                    android:layout_below="@id/ITX_009"
                    android:layout_marginTop="5dp"
                    android:layout_marginStart="15dp"/>

                <!-- 出版社名ふりがな -->
                <EditText
                    android:id="@+id/ITX_011"
                    android:layout_width="270dp"
                    android:layout_height="30dp"
                    android:hint="@string/publisher_yomi_placeholder"
                    android:textSize="12dp"
                    android:inputType="text"
                    android:layout_below="@id/ITX_010"
                    android:layout_marginTop="5dp"/>
                <Button
                    android:layout_width="35dp"
                    android:layout_height="30dp"
                    android:text="@string/delete_btn_text"
                    android:textSize="10dp"
                    android:layout_toEndOf="@id/ITX_011"
                    android:layout_below="@id/ITX_010"
                android:layout_marginTop="5dp"
                android:layout_marginStart="15dp"/>

               <!-- ISBN -->
                <EditText
                    android:id="@+id/ITX_012"
                    android:layout_width="270dp"
                    android:layout_height="30dp"
                    android:hint="@string/ISBN_placeholder"
                    android:textSize="12dp"
                    android:layout_below="@id/ITX_011"
                    android:layout_marginTop="5dp"/>
                <Button
                    android:layout_width="35dp"
                    android:layout_height="30dp"
                    android:text="@string/delete_btn_text"
                    android:textSize="10dp"
                    android:layout_toEndOf="@id/ITX_012"
                    android:layout_below="@id/ITX_011"
                    android:layout_marginTop="5dp"
                    android:layout_marginStart="15dp"/>

                <!-- 発売日 -->
                <TextView
                     android:id="@+id/IL_012"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/release_date_label"
                     android:textSize="12dp"
                     android:layout_below="@id/ITX_012"
                     android:layout_marginTop="5dp"
                    android:focusable="true"
                    android:focusableInTouchMode="true">
                    <requestFocus />
                </TextView>

                <!-- 巻数 -->
                <TextView
                    android:id="@+id/IL_014"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/number_of_turns_label"
                    android:textSize="12dp"
                    android:layout_below="@id/IL_012"
                    android:layout_marginTop="10dp"/>
                <EditText
                    android:id="@+id/ITX_014"
                    android:layout_width="100dp"
                    android:layout_height="30dp"
                    android:textSize="12dp"
                    android:inputType="number"
                    android:gravity="end"
                    android:layout_below="@id/IL_012"
                    android:layout_toEndOf="@id/IL_014"
                    android:layout_marginStart="15dp"/>
                <Button
                    android:layout_width="35dp"
                    android:layout_height="30dp"
                    android:text="@string/delete_btn_text"
                    android:textSize="10dp"
                    android:layout_below="@id/IL_012"
                    android:layout_toEndOf="@id/ITX_014"
                    android:layout_marginStart="15dp" />

                <!-- 金額 -->
                <TextView
                    android:id="@+id/IL_015"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/money_label"
                    android:textSize="12dp"
                    android:layout_below="@id/IL_014"
                    android:layout_marginTop="10dp"/>
                <EditText
                    android:id="@+id/ITX_015"
                    android:layout_width="100dp"
                    android:layout_height="30dp"
                    android:textSize="12dp"
                    android:inputType="number"
                    android:gravity="end"
                    android:layout_below="@id/IL_014"
                    android:layout_toEndOf="@id/IL_015"
                    android:layout_marginStart="15dp"/>
                <Button
                    android:layout_width="35dp"
                    android:layout_height="30dp"
                    android:text="@string/delete_btn_text"
                    android:textSize="10dp"
                    android:gravity="center_horizontal"
                    android:layout_below="@id/IL_014"
                    android:layout_toEndOf="@id/ITX_015"
                    android:layout_marginStart="15dp"/>

                <!-- 状態 -->
                <TextView
                    android:id="@+id/IL_002"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/state_label"
                    android:textSize="12dp"
                    android:layout_below="@id/IL_015"
                    android:layout_marginTop="10dp"/>
                <Spinner
                    android:id="@+id/IP_002"
                    android:layout_width="100dp"
                    android:layout_height="35dp"
                    android:entries="@array/spinner_values"
                    android:layout_below="@id/IL_015"
                    android:layout_toEndOf="@id/IL_002"
                    android:layout_marginStart="15dp"/>

                <!-- 読破状況 -->
                <TextView
                    android:id="@+id/IL_016"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/read_through_situation_label"
                    android:textSize="12dp"
                    android:layout_below="@id/IL_002"
                    android:layout_marginTop="10dp"/>
                <SeekBar
                    android:id="@+id/IS_001"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/IL_016"
                    android:progress="0"
                    android:max="100">
                </SeekBar>

                <!-- グループ -->
                <TextView
                    android:id="@+id/IL_017"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                   android:text="@string/group_label"
                    android:textSize="12dp"
                    android:layout_below="@id/IS_001"
                    android:layout_marginTop="10dp"/>
                <EditText
                    android:id="@+id/ITX_016"
                    android:layout_width="300dp"
                    android:layout_height="50dp"
                    android:textSize="12dp"
                    android:layout_below="@id/IL_017"
                    android:layout_marginTop="0dp"/>

                <!-- メモ -->
                <TextView
                    android:id="@+id/IL_018"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/memo_label"
                    android:textSize="12dp"
                    android:layout_below="@id/ITX_016"
                    android:layout_marginTop="10dp"/>
                <EditText
                    android:id="@+id/ITX_017"
                    android:layout_width="300dp"
                    android:layout_height="50dp"
                    android:textSize="12dp"
                    android:layout_below="@id/IL_018"
                    android:layout_marginTop="0dp"/>

            </RelativeLayout>
        </ScrollView>
    </FrameLayout>

    <fragment android:id="@+id/navigation_drawer"
        android:layout_width="@dimen/navigation_drawer_width"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:name="jp.co.icomsys.it21.fruitbasket.NavigationDrawerFragment"
        tools:layout="@layout/fragment_navigation_drawer" />

</android.support.v4.widget.DrawerLayout>
